--- a/gestao/static/gestao/css/layout.css
+++ b/gestao/static/gestao/css/layout.css
@@ -33,15 +33,15 @@ body {
 
 .fpp-container {
   width: 100%;
-  max-width: none;
-  margin: 0;
+  max-width: 1280px;
+  margin: 0 auto;
   padding: 0;
 }
 
 .page-shell,
 .page-container {
   width: 100%;
-  max-width: none;
+  max-width: 100%;
   margin: 0;
   padding: 0;
 }
