--- a/gestao/static/gestao/css/admin-theme.css
+++ b/gestao/static/gestao/css/admin-theme.css
@@ -342,15 +342,17 @@ a:hover {
 }
 
 .table-wrapper {
+  width: 100%;
   overflow-x: auto;
   margin: 0 -0.75rem;
   padding: 0 0.75rem;
+  -webkit-overflow-scrolling: touch;
 }
 
 .data-table {
   width: 100%;
   border-collapse: collapse;
-  min-width: 720px;
+  min-width: 1100px;
 }
 
 .data-table th,
