--- a/gestao/templates/admin_custom/alertas_form.html
+++ b/gestao/templates/admin_custom/alertas_form.html
@@ -33,6 +33,7 @@
         <div>
           <label class="form-label" for="{{ form.continente.id_for_label }}">{{ form.continente.label }}</label>
           {{ form.continente }}
+          <p class="form-hint">Usado para organizar a vitrine de alertas.</p>
         </div>
         <div>
           <label class="form-label" for="{{ form.pais.id_for_label }}">{{ form.pais.label }}</label>
@@ -78,6 +79,7 @@
         <div>
           <label class="form-label" for="{{ form.valor_milhas.id_for_label }}">{{ form.valor_milhas.label }}</label>
           {{ form.valor_milhas }}
+          <p class="form-hint">Milhas utilizadas por trecho.</p>
         </div>
       </div>
       <div class="form-group">
@@ -96,7 +98,7 @@
       <div class="section-card__header">
         <div>
           <div class="section-card__title">Datas de viagem</div>
-          <p class="section-card__description">Selecione múltiplas datas ou intervalos e confirme.</p>
+          <p class="section-card__description">Selecione múltiplas datas disponíveis.</p>
         </div>
       </div>
       <div class="alerta-dates">
