--- a/gestao/static/gestao/formulario_base_gestao.css
+++ b/gestao/static/gestao/formulario_base_gestao.css
@@ -111,6 +111,12 @@
   margin-bottom: 0.35rem;
 }
 
+.form-hint {
+  margin: 0.35rem 0 0;
+  font-size: 11px;
+  color: var(--muted);
+}
+
 input[type="text"],
 input[type="password"],
 input[type="number"],
