--- a/gestao/templates/admin_custom/base_admin.html
+++ b/gestao/templates/admin_custom/base_admin.html
@@ -255,6 +255,7 @@
 
 <script src="{% static 'gestao/js/forms.js' %}" defer></script>
 <script type="module" src="{% static 'painel_cliente/js/app.js' %}" defer></script>
+{% block extra_js %}{% endblock %}
 
 </body>
 </html>
